--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
- "TOKEN": "",
+ "TOKEN": "OTU1MzM0MTYzNDAwMTMwNjQw.YjgKRQ.BFP1m7Uav9ndjn0QfjRmPSySpD4",
  "YOUTUBE_API_KEY": "",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
